# 4rel4in-rpi

./: .gitignore  4rel4in  MODBUS.md  Makefile  README.md
python/: LICENSE  README.md  setup.py
python/docs/: conf.py  index.rst
python/docs/doctrees/: environment.pickle  index.doctree
python/docs/markdown/: index.md
python/examples/: counter.py  encoder.py  pwm.py  test.py
python/sm_4rel4in/: LICENSE  README.md  __init__.py  pyproject.toml  setup.py
python/sm_4rel4in.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/sm_4rel4in/sm_4rel4in/: __init__.py
python/sm_4rel4in/sm_4rel4in_p/: __init__.py
src/: 4rel4in.c  4rel4in.h  cfg485.c  input.c  relay.c
update/: README.md  update
