[build-system]
requires = [
"setuptools>=42",
"wheel"
]
build-backend = "setuptools.build_meta"
[project]
name = "sm_4rel4in"
version = "1.0.5"
authors = [
  { name="Sequent Microsystems", email="olcitu@gmail.com" },
]
description = "Library for Sequent Microsystems Four Relays four HV Inputs 8-Layer Stackable HAT for Raspberry Pi"
readme = "README.md"
requires-python = ">=2.7"
classifiers = [
	"Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SequentMicrosystems/4rel4in-rpi/tree/main/python/sm_4rel4in"
"Bug Tracker" = "https://github.com/SequentMicrosystems/4rel4in-rpi/issues"